# termio

./: .gitignore  Cargo.toml  Dockerfile  MANIFEST.in  Makefile  README.md  __init__.py  config.json  docker-compose.yml  dummy.txt  install.sh  main.py  memory.db  memory_key.key  nlp.py  project_specs.json  requirements.txt  security_key.key  setup.py  test_auralis.py  test_commands.py  test_hf_apis.py  tts.py  user_settings.json
.github/workflows/: ci.yml  test.yml
ai_service/: Dockerfile  README.md  pyproject.toml
ai_service/src/: __init__.py  embeddings.py  inference.py  main.py  models.py  nlu.py  vision.py
ai_service/tests/: test_api.py  test_nlu.py
apps/desktop/: package-lock.json  package.json  tailwind.config.js
apps/desktop/.svelte-kit/: ambient.d.ts
apps/desktop/.svelte-kit/output/client/.vite/: manifest.json
apps/desktop/.svelte-kit/output/client/_app/immutable/assets/: 2.Dz3OSMBF.css
apps/desktop/.svelte-kit/output/client/_app/immutable/chunks/: LkcnRoe0.js  myKowI8s.js
apps/desktop/.svelte-kit/output/client/_app/immutable/nodes/: 0.Cxqyw10L.js
apps/desktop/.svelte-kit/output/server/: manifest-full.js
apps/desktop/.svelte-kit/output/server/.vite/: manifest.json
apps/desktop/.svelte-kit/output/server/_app/immutable/assets/: _page.ChCTlkm-.css
apps/desktop/.svelte-kit/output/server/chunks/: index.js  internal.js  ssr.js
apps/desktop/.svelte-kit/output/server/entries/pages/: _page.svelte.js
apps/desktop/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
apps/desktop/src/: app.css  app.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/lib/components/: ConversationView.svelte  DevicePairingModal.svelte  InputArea.svelte  MessageBubble.svelte  PluginModal.svelte  SettingsModal.svelte  Sidebar.svelte  StatusBar.svelte  TitleBar.svelte  index.ts
apps/desktop/src/lib/stores/: app.ts
apps/desktop/src/routes/: +page.svelte
apps/mobile/: App.tsx  package.json
apps/mobile/src/navigation/: AppNavigator.tsx
apps/mobile/src/screens/: AssistantScreen.tsx  HomeScreen.tsx  PluginsScreen.tsx  ScanScreen.tsx  SettingsScreen.tsx  SmartHomeScreen.tsx  SubscriptionScreen.tsx
apps/mobile/src/store/: appStore.ts
automations/: macro_test_macro.json
config/: default.toml
crates/hedtronix-core/: Cargo.toml
crates/hedtronix-core/src/: config.rs  error.rs  lib.rs
crates/hedtronix-core/src/auth/: device_key.rs  session.rs
crates/hedtronix-core/src/crypto/: encryption.rs  mod.rs
crates/hedtronix-core/src/events/: bus.rs  mod.rs  types.rs
crates/hedtronix-core/src/memory/: mod.rs  ring_buffer.rs  store.rs  vector_store.rs
crates/hedtronix-core/src/models/: conversation.rs  message.rs  mod.rs
crates/hedtronix-core/src/plugins/: capabilities.rs  manifest.rs  mod.rs  runtime.rs
crates/hedtronix-core/src/sync/: crdt.rs  delta.rs  mod.rs  peer.rs
crates/hedtronix-core/src/voice/: mod.rs  recognizer.rs
crates/hedtronix-server/: Cargo.toml
crates/hedtronix-server/src/: handlers.rs  main.rs  routes.rs  state.rs
crates/hedtronix-server/src/middleware/: auth.rs  mod.rs
crates/hedtronix-tui/: Cargo.toml
crates/hedtronix-tui/src/: app.rs  main.rs  theme.rs  ui.rs
crates/termio-core/: Cargo.toml
crates/termio-core/src/: config.rs  error.rs  lib.rs
crates/termio-core/src/auth/: device_key.rs  mod.rs  session.rs
crates/termio-core/src/crypto/: encryption.rs  key_derivation.rs  mod.rs
crates/termio-core/src/events/: bus.rs  mod.rs  types.rs
crates/termio-core/src/health/: mod.rs  monitor.rs
crates/termio-core/src/memory/: mod.rs  ring_buffer.rs  store.rs  vector_store.rs
crates/termio-core/src/models/: action_plan.rs  conversation.rs  device_sync.rs  document.rs  health_data.rs  knowledge_graph.rs  memory_entry.rs  message.rs  mod.rs  smart_home.rs  subscription.rs
crates/termio-core/src/notifications/: manager.rs  mod.rs  types.rs
crates/termio-core/src/payments/: mod.rs
crates/termio-core/src/plugins/: manifest.rs  mod.rs  runtime.rs
crates/termio-core/src/sync/: crdt.rs  delta.rs  mod.rs  peer.rs
crates/termio-core/src/voice/: mod.rs  recorder.rs
crates/termio-core/tests/: model_tests.rs
crates/termio-server/: Cargo.toml
crates/termio-server/src/: handlers.rs  main.rs  marketplace.rs  routes.rs  state.rs
crates/termio-server/src/jobs/: encrypted_backup.rs  knowledge_inference.rs  memory_indexing.rs  mod.rs  model_optimization.rs  notification_cleanup.rs  proactive_suggestions.rs  sync_polling.rs
crates/termio-server/src/middleware/: audit.rs  auth.rs  mod.rs  rate_limit.rs  sanitize.rs
crates/termio-server/tests/: api_integration.rs
crates/termio-tui/: Cargo.toml
crates/termio-tui/src/: app.rs  main.rs  ui.rs
docs/: README.md
migrations/: 001_initial.sql
modules/: __init__.py  action_planner.py  action_worker.py  action_workers.py  audio_worker.py  auralis_logging.py  automation.py  backup_restore.py  command_parser.py  daemon_supervisor.py  external_api.py  inference_worker.py  language_support.py  logging.py  logging_storage.py  memory.py  model_training.py  natural_dialogue_engine.py  nlp.py  nlp_hf.py  nlp_offline.py  offline_online_switch.py  performance.py  performance_optimizer.py  plugins.py  queue_manager.py  screen_control.py  screen_reader.py  security.py  security_privacy.py  settings.py  stt.py  stt_hf.py  stt_offline.py  task_orchestrator.py  tts.py  tts_hf.py  tts_offline.py  ui_worker.py  ux_flow_manager.py  (+2 more)
plugins/: calculator.py  calculator_plugin.py  weather_plugin.py
scripts/: auto_update.py  check_model_sizes.py  cleanup.py  download_models.py  initial_train.py  prepare_tokenizer.py  preprocess_corpora.py  quantize_and_pack.py
templates/: dashboard.html
tests/: __init__.py  test_memory.py  test_modules.py  test_plugins.py  test_settings.py  test_switch.py
