[tool.poetry]
name = "termio-ai"
version = "1.0.0"
description = "AI inference service for TERMIO"
authors = ["TERMIO Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.6.0"
llama-cpp-python = "^0.2.55"
sentence-transformers = "^2.3.0"
numpy = "^1.26.0"
httpx = "^0.26.0"
faster-whisper = "^1.0.0"
piper-tts = {version = "^1.2.0", markers = "sys_platform == 'linux'"}
transformers = "^4.36.0"
torch = {version = "^2.1.0", index = "pypi"}
librosa = "^0.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
mypy = "^1.8.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PL", "RUF"]
