[package]
name = "hedtronix-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for HEDTRONIX - shared types, memory, and configuration"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# Database
sqlx = { workspace = true }

# Configuration
config = { workspace = true }
toml = { workspace = true }

# Additional utilities
dirs = "5.0"
ulid = "1.1"

[dev-dependencies]
tokio-test = "0.4"
