[package]
name = "hedtronix-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Backend server for HEDTRONIX - HTTP API and service orchestration"

[[bin]]
name = "hedtronix-server"
path = "src/main.rs"

[dependencies]
# Core library
hedtronix-core = { path = "../hedtronix-core" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# HTTP client for AI service
reqwest = { version = "0.11", features = ["json"] }
