[package]
name = "termio-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for TERMIO - shared types, memory, and configuration"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# Database
sqlx = { workspace = true }

# Configuration
config = { workspace = true }
toml = { workspace = true }

# Cryptography
aes-gcm = { workspace = true }
argon2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

# JWT tokens
jsonwebtoken = { workspace = true }

# WASM runtime (plugins)
wasmtime = { workspace = true }

# P2P networking (sync)
libp2p = { workspace = true }

# Additional utilities
dirs = "5.0"
ulid = "1.1"

[dev-dependencies]
tokio-test = "0.4"
