[package]
name = "termio-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Backend server for TERMIO - HTTP API and service orchestration"

[[bin]]
name = "termio-server"
path = "src/main.rs"

[dependencies]
# Core library
termio-core = { path = "../termio-core" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = { workspace = true }

# HTTP framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# HTTP client for AI service
reqwest = { version = "0.11", features = ["json"] }

# Compression for backups
zstd = "0.13"

# CPU detection for idle-time jobs
num_cpus = "1.16"
